--- a/admin-panel/index.html
+++ b/admin-panel/index.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8" />
-  <title>📊 관리자 제출 내역 대시보드</title>
+  <meta charset="UTF-8">
+  <title>📊 관리자 로그 (보호됨)</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script type="module">
+    if (localStorage.getItem("auth") !== "ok") {
+      alert("접근 권한이 없습니다. 로그인하세요.");
+      location.href = "/login/index.html";
+    }
+  </script>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
     import { getDatabase, ref, onValue } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-database.js";
-
     const firebaseConfig = {
-      apiKey: "YOUR_FIREBASE_API_KEY",
-      authDomain: "YOUR_FIREBASE_DOMAIN",
-      databaseURL: "YOUR_FIREBASE_DB",
-      projectId: "YOUR_PROJECT_ID"
+      apiKey: "AIzaSyB....",
+      authDomain: "agrinexus-world.firebaseapp.com",
+      projectId: "agrinexus-world",
+      storageBucket: "agrinexus-world.appspot.com",
+      messagingSenderId: "1234567890",
+      appId: "1:1234567890:web:abcde123456"
     };
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
-
     window.onload = () => {
       const output = document.getElementById("logs");
       const logRef = ref(db, "agrinexus_logs/");
@@ -32,18 +38,16 @@
   </script>
   <style>
     body { font-family: sans-serif; padding: 2rem; background: #f9fafb; }
-    h1 { color: #2563eb; }
     table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
     th, td { padding: 0.5rem; border: 1px solid #ccc; text-align: left; }
+    th { background: #e2e8f0; }
   </style>
 </head>
 <body>
-  <h1>📊 관리자 제출 내역 대시보드</h1>
+  <h1>📊 관리자 로그 대시보드</h1>
   <table>
-    <thead><tr><th>제출 시간</th><th>제출 내용</th></tr></thead>
-    <tbody id="logs">
-      <tr><td colspan="2">불러오는 중...</td></tr>
-    </tbody>
+    <thead><tr><th>제출 시간</th><th>내용</th></tr></thead>
+    <tbody id="logs"><tr><td colspan="2">불러오는 중...</td></tr></tbody>
   </table>
 </body>
 </html>
