--- a/index.html
+++ b/index.html
@@ -2,33 +2,48 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>🌿 고객 전용 대시보드</title>
+  <title>📋 관리자 전용 리포트 탭</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: sans-serif; padding: 2rem; text-align: center; background: #f0fdf4; }
-    h1 { color: #047857; }
-    input, textarea { width: 80%; padding: 0.6rem; margin: 0.5rem 0; }
-    button { padding: 0.6rem 1.2rem; background: #10b981; color: white; border: none; cursor: pointer; }
+    body { font-family: sans-serif; text-align: center; padding: 2rem; background: #f8fafc; }
+    h1 { color: #1e3a8a; }
+    canvas { max-width: 600px; margin: 2rem auto; }
   </style>
 </head>
 <body>
-  <h1>🌿 고객 대시보드</h1>
-  <p>의견 또는 요청을 입력하고 파일을 첨부해주세요.</p>
-  <textarea id="comment" rows="4" placeholder="요청 내용을 입력하세요..."></textarea><br/>
-  <input type="file" id="file" /><br/>
-  <button onclick="submit()">제출</button>
-  <p id="status"></p>
+  <h1>📋 관리자 리포트</h1>
+  <canvas id="activityChart"></canvas>
+  <canvas id="revenueChart"></canvas>
 
   <script>
-    function submit() {
-      const text = document.getElementById("comment").value;
-      const file = document.getElementById("file").files[0];
-      if (!text || !file) {
-        document.getElementById("status").innerText = "❗ 내용과 파일 모두 입력해주세요.";
-        return;
+    const ctx1 = document.getElementById('activityChart').getContext('2d');
+    new Chart(ctx1, {
+      type: 'bar',
+      data: {
+        labels: ['1월', '2월', '3월', '4월'],
+        datasets: [{
+          label: '제출 건수',
+          data: [20, 30, 18, 40],
+          backgroundColor: '#60a5fa'
+        }]
       }
-      document.getElementById("status").innerText = "✅ 제출 완료 (시뮬레이션 저장됨)";
-    }
+    });
+
+    const ctx2 = document.getElementById('revenueChart').getContext('2d');
+    new Chart(ctx2, {
+      type: 'line',
+      data: {
+        labels: ['1월', '2월', '3월', '4월'],
+        datasets: [{
+          label: '예상 수익 추이 (₩)',
+          data: [2000000, 2800000, 2600000, 3400000],
+          borderColor: '#10b981',
+          fill: false,
+          tension: 0.3
+        }]
+      }
+    });
   </script>
 </body>
 </html>
