--- a/index.html
+++ b/index.html
@@ -2,43 +2,45 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>🌐 AgriNexus 통합 대시보드</title>
+  <title>📬 리포트 이메일 자동 전송</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <style>
-    body { font-family: sans-serif; background: #f1f5f9; text-align: center; padding: 2rem; }
-    h1 { color: #1e3a8a; margin-bottom: 1rem; }
-    nav { display: flex; flex-wrap: wrap; justify-content: center; gap: 1rem; max-width: 900px; margin: auto; }
-    a {
-      background: #2563eb;
-      color: white;
-      text-decoration: none;
-      padding: 0.8rem 1.4rem;
-      border-radius: 8px;
-      display: inline-block;
-      min-width: 250px;
-    }
-    a:hover { background: #1e40af; }
+    body { font-family: sans-serif; text-align: center; padding: 2rem; background: #f9f9fb; }
+    textarea, input { width: 80%; padding: 0.6rem; margin: 0.5rem auto; display: block; }
+    button { padding: 0.6rem 1.2rem; background: #16a34a; color: white; border: none; cursor: pointer; }
+    p { margin-top: 1rem; font-weight: bold; }
   </style>
 </head>
 <body>
-  <h1>🌐 AgriNexus 운영자용 대시보드</h1>
-  <nav>
-    <a href="/routes">📂 전체 기능 메뉴</a>
-    <a href="/login">🔐 관리자 로그인</a>
-    <a href="/admin-panel">📊 관리자 대시보드</a>
-    <a href="/admin-report">📋 관리자 리포트 탭</a>
-    <a href="/data-visualization">📈 통계 차트</a>
-    <a href="/user-dashboard">👤 사용자 이력 조회</a>
-    <a href="/upload">📤 사용자 파일 업로드</a>
-    <a href="/contract-pdf">📑 계약서/세금계산서 생성</a>
-    <a href="/revenue-report">💰 수익 계산기</a>
-    <a href="/forecast-report">📈 수익 예측 리포트</a>
-    <a href="/csv-download">📥 CSV 다운로드</a>
-    <a href="/pdf-report">📄 일반 PDF 출력</a>
-    <a href="/alert">📬 관리자 알림</a>
-    <a href="/lang-detect">🌐 언어 감지</a>
-    <a href="/client-view">🌿 사용자 대시보드</a>
-    <a href="/pwa/manifest.json">📱 PWA 설치 파일</a>
-  </nav>
+  <h1>📬 자동 이메일 리포트 전송</h1>
+  <input type="email" id="email" placeholder="수신자 이메일 주소 입력" />
+  <textarea id="content" rows="6" placeholder="전송할 요약 보고서 내용을 입력하세요"></textarea>
+  <button onclick="sendReport()">전송하기</button>
+  <p id="status"></p>
+
+<script>
+  (function() {
+    emailjs.init("_Unfnkj7SMCOXw3yY"); // 실제 Public Key로 교체
+  })();
+
+  function sendReport() {
+    const email = document.getElementById("email").value;
+    const content = document.getElementById("content").value;
+    if (!email || !content) {
+      document.getElementById("status").innerText = "❗ 이메일 주소와 내용을 모두 입력하세요.";
+      return;
+    }
+
+    emailjs.send("service_0sdhn4f", "template_edhsuq5", {
+      message: content,
+      email: email
+    }).then(() => {
+      document.getElementById("status").innerText = "✅ 이메일 전송 완료!";
+    }).catch(err => {
+      document.getElementById("status").innerText = "❌ 오류 발생: " + JSON.stringify(err);
+    });
+  }
+</script>
 </body>
 </html>
